fix(osPopup): Better support for popup subtitle
Improve position of action buttons (at the bottom)
Better whitespace between parts of the popup

--- a/src/components/popup/popup.styl
+++ b/src/components/popup/popup.styl
@@ -38,17 +38,16 @@ os-popover
   margin 0
   color rgba(0, 0, 0, 0.871)
   font-size 20px
-  line-height 1.2
-  height 20px
+  font-weight 400
+  line-height 1.1
 
-.os-popover-subtitle
+.os-popover__subtitle
   padding 0
-  margin 13px 0 0 0
+  margin 12px 0 0 0
   color rgba(0, 0, 0, 0.871)
   font-weight normal
-  font-size 18px
+  font-size 16px
   line-height 1.2
-  height 18px
 
 .os-popover-description
   margin 13px 0 33px
@@ -65,10 +64,10 @@ os-popover
 os-popover-actions
   color #2b97ef
 
-.os-popover-closeIcon
+.os-popover__close-icon
   position absolute
-  right 29px
-  top 29px
+  right 20px
+  top 20px
 
 os-popover-main-image
   max-height 184px
@@ -79,6 +78,10 @@ os-popover-actions
 
     &:last-child
       margin-right 0
+
+.os-popover__action
+  margin-left -16px
+  margin-bottom -16px
 
 // arrow
 $arrowWidth = 20px
